Fixed navbar covering body
Added z-index in header and padding-top in body so the navbar doesn't
cover up the body

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
 	width: 100%;
 	margin: auto;
+	padding-top: 30px;
 }
 
 .header {
@@ -9,6 +10,7 @@ body {
 	top: 0;
 	left: 0;
 	position: fixed;
+	z-index:1000;
 }
 
 .nav {
